--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ i {
   height: auto;
   border-radius: 4px;
   background-color: #f7f6f6;
-  padding: 4px;
+  padding: 8px;
 }
 
 .search {
@@ -244,6 +244,8 @@ grid-row-gap: 0px;
   border-radius: 4px;
   border: none;
   padding: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 .file-upload{
   opacity: 0;
